<resources>
    <string name="app_name">Gizli Rehber</string>


    <string name="global_enable_contact_phone_state_permissions">Lütfen kişiye erişim iznini aktif edin.</string>
    <string name="global_message_title">Mesaj</string>
    <string name="global_call_screening_required_message">Uygulamanın çalışması için aşağıdaki iletişim kutusunda Gizli Rehber uygulamasını seçmelisiniz..</string>

    <string-array name="yapilacakIslemSecenek">
        <item>Aramanın kimden olduğuna dair mesaj ver</item>
        <item>Aramayı reddet</item>
        <item>Aramayı gizle</item>
    </string-array>
    <string name="gelen_cagri_goster">%s %s\'den gelen çağrı.</string>
    <string name="gelen_cagri_red">%s %s\'den gelen çağrı red edildi.</string>
    <string name="gelen_cagri_gizle">%s %s\'den gelen çağrı gizlendi.</string>
    <string name="kisi_guncelleme_basarili">Kişi başarıyla güncellendi</string>
    <string name="ana_sayfa">Ana Sayfa</string>
    <string name="gecmis">Geçmiş</string>
    <string name="ekle">Ekle</string>
    <string name="soyad">Soyad</string>
    <string name="aciklama">Açıklama</string>
    <string name="ad">Ad</string>
    <string name="telNoInput">(___) ___ __ __</string>
    <string name="guncelle">Güncelle</string>
    <string name="sil">Sil</string>
    <string name="ara">Ara</string>
    <string name="phone_number">Phone Number</string>
    <string name="sms">SMS</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="cep">Cep</string>
    <string name="install_Whatsapp_first">Please install whatsapp first!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ayarlar">Ayarlar</string>
    <string name="varsayilan_tema">Varsayılan Tema</string>
    <string name="ozel_tema">Özel Tema</string>

    <string name="notification_name">Deneme</string>
    <string name="notification_description">deneme2</string>
    <string name="channel_name">channel name</string>
    <string name="channel_description">channel desc</string>
</resources>